# sb

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  cliff.toml  index.html
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust.yml
crates/starbloom-base/: Cargo.toml
crates/starbloom-base/src/: input.rs  lib.rs  prelude.rs  render.rs
crates/starbloom-camera/: Cargo.toml
crates/starbloom-camera/src/: lib.rs
crates/starbloom-intro/: Cargo.toml
crates/starbloom-intro/src/: lib.rs
crates/starbloom-map/: Cargo.toml
crates/starbloom-map/src/: chunk.rs  chunkloader.rs  lib.rs  tile.rs
crates/starbloom-tiles/: Cargo.toml
crates/starbloom-tiles/src/: lib.rs
crates/starbloom-worldgen/: Cargo.toml
crates/starbloom-worldgen/src/: biome.rs  lib.rs
docs/: about.md  about.rst  conf.py  index.md  index.rst  requirements.txt
docs/gameplay/: index.md  plants.md  robots.md  spaceships.md  wildfires.md
docs/implementation/: ecs.md  index.md
docs/modding/: creatures.md  index.md  index.rst  systems.md  tiles.md
src/: core.rs  lib.rs  main.rs  player.rs
wix/: License.rtf  main.wxs
