[workspace.package]
version = "0.1.5"
authors = ["John Schiefelbein"]
license = "MIT"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/starbloom-base",
    "crates/starbloom-camera",
    "crates/starbloom-intro",
    "crates/starbloom-map",
    "crates/starbloom-tiles",
    "crates/starbloom-worldgen"
]

[package]
name = "starbloom"
description = "A game"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = true

[dependencies]
bevy_ecs = {version="0.19", default-features=false, features=["debug"]}
macroquad = "0.4.15"
starbloom-base = { path = "crates/starbloom-base" }
starbloom-camera = { path = "crates/starbloom-camera" }
starbloom-intro = { path = "crates/starbloom-intro" }
starbloom-map = { path = "crates/starbloom-map" }
starbloom-tiles = { path = "crates/starbloom-tiles" }
starbloom-worldgen = { path = "crates/starbloom-worldgen" }

[features]
skip_intro = []
show_fps = []
web = []
mobile = []

dev = ["skip_intro", "show_fps"]

native_dev = ["dev"]
web_dev = ["dev", "web"]
mobile_dev = ["dev", "mobile"]

release = []

native_release = ["release"]
web_release = ["release", "web"]
mobile_release = ["release", "mobile"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
incremental = true
