[workspace.package]
version = "0.3.0"
authors = ["John Schiefelbein"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
bevy_ecs = { version = "0.19", default-features = false }
macroquad = "0.4.15"
noise = "0.9.0"
starbloom-intro = { version = "0.3.0", path = "crates/starbloom-intro" }
starbloom-map = { version = "0.3.0", path = "crates/starbloom-map" }
starbloom-worldgen = { version = "0.3.0", path = "crates/starbloom-worldgen" }
starbloom-camera = { version = "0.3.0", path = "crates/starbloom-camera" }
starbloom-tiles = { version = "0.3.0", path = "crates/starbloom-tiles" }
starbloom-base = { version = "0.3.0", path = "crates/starbloom-base" }

[workspace]
resolver = "3"
members = [
    "crates/starbloom-base",
    "crates/starbloom-camera",
    "crates/starbloom-intro",
    "crates/starbloom-map",
    "crates/starbloom-tiles",
    "crates/starbloom-worldgen"
]

[package]
name = "starbloom"
description = "A game"
version.workspace = true
license.workspace = true
edition.workspace = true
homepage = "https://sb.readthedocs.io"
repository = "https://github.com/1kgd/sb"
publish = true

[dependencies]
bevy_ecs = { workspace = true, features = ["debug"] }
macroquad = { workspace = true }
starbloom-base = { workspace = true }
starbloom-camera = { workspace = true }
starbloom-intro = { workspace = true }
starbloom-map = { workspace = true }
starbloom-tiles = { workspace = true }
starbloom-worldgen = { workspace = true }

[features]
skip_intro = []
show_fps = []
web = []
mobile = []

dev = ["skip_intro", "show_fps"]

native_dev = ["dev"]
web_dev = ["dev", "web"]
mobile_dev = ["dev", "mobile"]

release = []

native_release = ["release"]
web_release = ["release", "web"]
mobile_release = ["release", "mobile"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
incremental = true
