[workspace.package]
version = "0.5.0"
authors = ["John Schiefelbein"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
bevy_ecs = { version = "0.19", default-features = false, features = ["debug"] }
noise = "0.9.0"
starbloom-intro = { version = "0.5.0", path = "crates/starbloom-intro" }
starbloom-map = { version = "0.5.0", path = "crates/starbloom-map" }
starbloom-worldgen = { version = "0.5.0", path = "crates/starbloom-worldgen" }
starbloom-camera = { version = "0.5.0", path = "crates/starbloom-camera" }
starbloom-tiles = { version = "0.5.0", path = "crates/starbloom-tiles" }
starbloom-base = { version = "0.5.0", path = "crates/starbloom-base" }
glam = "0.33.2"

[workspace]
resolver = "3"
members = [
    "crates/starbloom-base",
    "crates/starbloom-camera",
    "crates/starbloom-intro",
    "crates/starbloom-map",
    "crates/starbloom-tiles",
    "crates/starbloom-worldgen"
]

[package]
name = "starbloom"
description = "A game"
version.workspace = true
license.workspace = true
edition.workspace = true
homepage = "https://sb.readthedocs.io"
repository = "https://github.com/1kgd/sb"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_ecs.workspace = true
egor = "0.10.0"
glam.workspace = true 
starbloom-base = { workspace = true }
starbloom-camera = { workspace = true }
starbloom-intro = { workspace = true }
starbloom-map = { workspace = true }
starbloom-tiles = { workspace = true }
starbloom-worldgen = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "30.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[features]
skip_intro = []
show_fps = []
web = []
mobile = []

dev = ["skip_intro", "show_fps"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
