[package]
name = "starbloom-camera"
description = "sub-package for starbloom"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
egor = { workspace = true }
egor_glue = { workspace = true }
starbloom-base = { workspace = true }
