[package]
name = "starbloom-map"
description = "sub-package for starbloom"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = {version="0.19", default-features=false}
macroquad = "0.4.15"
starbloom-base = { version = "0.1.0", path = "../starbloom-base" }
starbloom-camera = { version = "0.1.0", path = "../starbloom-camera" }
starbloom-tiles = { version = "0.1.0", path = "../starbloom-tiles" }
