[package]
name = "starbloom-map"
description = "sub-package for starbloom"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
macroquad = { workspace = true }
starbloom-base = { workspace = true }
starbloom-camera = { workspace = true }
starbloom-tiles = { workspace = true }
