[package]
name = "starbloom-worldgen"
description = "sub-package for starbloom"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs = {version="0.19", default-features=false}
macroquad = "0.4.15"
noise = "0.9.0"
starbloom-base = { version = "0.1.0", path = "../starbloom-base" }
