[package]
name = "starbloom-worldgen"
description = "sub-package for starbloom"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
macroquad = { workspace = true }
noise = { workspace = true }
starbloom-base = { workspace = true }
